public class Skyjo {
    public static void main(String[] args) {
        Partie partie = new Partie(2);
        partie.demarrer();
    }
}