@startuml Skyjo
skinparam style strictuml
skinparam classAttributeIconSize 0
skinparam classFontStyle Bold
hide empty members

class Skyjo{
    main(args : String[*])
}
package model{
    class Carte{
        - valeur : Integer
        - facecachee : Boolean
        + <<creates>> Carte(valeur : Integer)
        + getValeur() : Integer
        + setValeur(valeur : Integer)
        + changerVisibilite()
    }

    class Joueur{
        - nom : String
        + Joueur()
        + Joueur(nom : String)
        + getNom() : String
        + getGrille() : GrilleJoueur
        + setNom(nom : String)
        + piocher() : Carte
    }

    class GrilleJoueur{
        - sommePoints : Integer
        +<<creates>>GrilleJoueur()
        + getColonne() : Carte[*]
        + getSomme() : Integer
        + setSomme(somme : Integer)
        + remplacerCarte(nouvelleCarte : Carte, colonne : Integer, ligne : Integer)
        + retournerCarte(carte : Carte, colonne : Integer, ligne : Integer)
        + retirerColonne()
        + calculSomme()
        + estComplete() : Boolean
        + addObserver(obs : GrilleObserver)
        + notifyObservers()
    }

    Joueur "1\n - grille" o--> GrilleJoueur : possède >

    interface GrilleObserver{
        + Update()
    }
    GrilleJoueur "*\n- observers" o-u-> GrilleObserver

    class Partie{
        - __nbJoueurs : Integer
        + <<creates>> Partie(nbJoueurs : Integer)
        + getNbJoueurs() : Integer
        + remplirPioche()
        + distribuer()
        + demarrer()
    }

    Partie "*\n- pioche" o--> Carte
    Partie "*\n- defausse" o--> Carte
    Partie "*\n- joueurs" o-u-> Joueur : fait s'affronter >
    GrilleJoueur "*\n - grille" o--> Carte : contient >
}
@enduml